# npcnix

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
misc/git-hooks/: pre-commit
modules/: npcnix.nix
src/: config.rs  data_dir.rs  lib.rs  main.rs  misc.rs  opts.rs
terraform/install/: main.tf
terraform/instance/: main.tf
terraform/instance_multi/: main.tf
terraform/remote_s3/: main.tf
terraform/remote_s3_upload/: main.tf
terraform/store_s3/: main.tf
