[package]
name = "npcnix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
strip = "debuginfo"
debug = 0

[dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.24", features = ["serde", "clock"] }
clap = { version = "4.2.1", features = ["derive", "env"] }
md-5 = "0.10.5"
# log = { version = "0.4.17", features = ["kv_unstable"] }
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
signal-hook = "0.3.15"
tar = "0.4.38"
tempfile = "3.5.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
ureq = { version = "2.6.2", features = ["rustls-native-certs"] }
url = { version = "2.3.1", features = ["serde"] }
zstd = "0.12.3"
